--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kshivanku/apiaiHeroku#readme",
   "dependencies": {
+    "actions-on-google": "^1.1.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3"
   }
